--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,11 @@
 title: Perosu1 / Peter Kenda
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+**Under constuction.**
+If you are looking for the map that was on this address click [HERE](https://perosu1.github.io/SlovenianBordersMap/)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  Perosu1
 
 # Build settings
 theme: jekyll-theme-minimal
