--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Perosu1 / Peter Kenda
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Under constuction.
-  If you are looking for the map that was on this address go to perosu1.github.io/SlovenianBordersMap/
+  If you are looking for the map that was on this address go to https://perosu1.github.io/SlovenianBordersMap/
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
